--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "lukeraymonddowning/honey": "^0.4.0",
+        "msurguy/honeypot": "^1.1",
         "spatie/laravel-honeypot": "^4.3"
     },
     "require-dev": {
