--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/ui": "^3.4",
         "lukeraymonddowning/honey": "^0.4.0",
         "msurguy/honeypot": "^1.1",
-        "spatie/laravel-honeypot": "^4.3"
+        "spatie/laravel-honeypot": "^4.3",
+        "stripe/stripe-php": "^9.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
