--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.4",
+        "gyurobenjamin/closeio-laravel-api": "^1.0",
         "laravel/framework": "^9.11",
         "laravel/passport": "^10.4",
         "laravel/sanctum": "^2.14.1",
@@ -14,6 +15,7 @@
         "laravel/ui": "^3.4",
         "lukeraymonddowning/honey": "^0.4.0",
         "msurguy/honeypot": "^1.1",
+        "rmccue/requests": "^2.0",
         "spatie/laravel-honeypot": "^4.3",
         "stripe/stripe-php": "^9.4"
     },
