--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^3.4",
         "lukeraymonddowning/honey": "^0.4.0",
         "msurguy/honeypot": "^1.1",
+        "pusher/pusher-php-server": "^7.2",
         "rmccue/requests": "^2.0",
         "spatie/laravel-honeypot": "^4.3",
         "stripe/stripe-php": "^9.4"
@@ -26,7 +27,8 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "theanik/laravel-more-command": "^1.3"
     },
     "autoload": {
         "psr-4": {
